@@ -9,6 +9,7 @@ Version 2.0.1 - SVN
  - Drop obsolete style definition.
  - Fixes to judge/compare.c for better handling of strange newlines and
    printing first difference summary as first line.
+ - Fix include test for Text_Highlighter to cope with missing PEAR.php.
 
 Version 2.0.0 - 23 July 2007
 ----------------------------
